--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,179 +1,64 @@
-
 version: 2
 updates:
-  - package-ecosystem: "bundler"
-    directories:
-      - "/updater"
-      - "/"
-    schedule:
-      interval: "daily"
-    groups:
-      sorbet:
-        patterns:
-          - "*-sorbet"
-          - "sorbet-*"
-          - "sorbet"
-          - "tapioca"
-      aws-sdk:
-        patterns:
-          - "aws-sdk-*"
-      prod-dependencies:
-        dependency-type: "production"
-        update-types:
-          - "minor"
-          - "patch"
-      dev-dependencies:
-        dependency-type: "development"
-        update-types:
-          - "minor"
-          - "patch"
-
-  - package-ecosystem: "composer"
-    directories:
-      - "/composer/helpers/v2"
-    schedule:
-      interval: "daily"
-    groups:
-      prod-dependencies:
-        dependency-type: "production"
-        update-types:
-          - "minor"
-          - "patch"
-      dev-dependencies:
-        dependency-type: "development"
-        update-types:
-          - "minor"
-          - "patch"
-  - package-ecosystem: "devcontainers"
-    directory: "/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "docker"
-    directories:
-      - "/"
-      - "/go_modules"
-      - "/cargo"
-    schedule:
-      interval: "daily"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "daily"
-    groups:
-      all-actions:
-        patterns: [ "*" ]
-  - package-ecosystem: "gomod"
-    directory: "/go_modules/helpers"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "mix"
-    directory: "/hex/helpers"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "npm"
-    directory: "/npm_and_yarn/helpers"
-    schedule:
-      interval: "daily"
-    groups:
-      npm-dependencies:
-        patterns:
-          - "@npmcli/arborist"
-          - "nock"
-          - "npm"
-          - "semver"
-        exclude-patterns:
-          - "detect-indent"
-      yarn-dependencies:
-        patterns:
-          - "@dependabot/yarn-lib"
-      pnpm-dependencies:
-        patterns:
-          - "@pnpm/lockfile-file"
-          - "@pnpm/dependency-path"
-      dev-dependencies:
-        dependency-type: "development"
-        update-types:
-          - "minor"
-          - "patch"
-    ignore:
-      - dependency-name: "npm"
-        update-types: [ "version-update:semver-major" ]
+      time: "06:00"
+      timezone: "UTC"
+    target-branch: "develop"
+    commit-message:
+      prefix: "[GH-Actions]"
+    open-pull-requests-limit: 10
+    labels:
+      - "dependencies"
+      - "github-actions"
+    automerge: true
+    automerge-strategy: "merge"
+
   - package-ecosystem: "pip"
-    directory: "/python/helpers"
-    schedule:
-      interval: "daily"
-    groups:
-      common:
-        patterns:
-          - pip
-          - cython
-          - flake8
-      poetry:
-        patterns:
-          - poetry
-          - hashin
-      pip-tools:
-        patterns:
-          - pip-tools
-      pipenv:
-        patterns:
-          - pipfile
-          - pipenv
-  - package-ecosystem: "pub"
-    directory: "/pub/helpers"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "nuget"
-    directory: "/nuget/helpers/lib/NuGetUpdater"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "dotnet-sdk"
-    directory: "/nuget/helpers/lib/NuGetUpdater"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "gitsubmodule"
     directory: "/"
     schedule:
       interval: "daily"
-
-  - package-ecosystem: "gitsubmodule"
-    directory: "/"
-    schedule:
-      interval: "daily"
+      time: "07:00"
+      timezone: "UTC"
     target-branch: "develop"
+    commit-message:
+      prefix: "[Python]"
+    open-pull-requests-limit: 10
+    labels:
+      - "dependencies"
+      - "python"
+    automerge: true
+    automerge-strategy: "merge"
 
-  - package-ecosystem: "github-actions"
+  - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "daily"
+      time: "08:00"
+      timezone: "UTC"
     target-branch: "develop"
+    commit-message:
+      prefix: "[NPM]"
+    open-pull-requests-limit: 10
+    labels:
+      - "dependencies"
+      - "npm"
+    automerge: true
+    automerge-strategy: "squash"
 
   - package-ecosystem: "docker"
-    directory: "/build"
+    directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      time: "09:00"
+      timezone: "UTC"
     target-branch: "develop"
-
-  - package-ecosystem: "gomod"
-    directory: "/build"
-    schedule:
-      interval: "daily"
-    target-branch: "develop"
-
-  - package-ecosystem: "maven"
-    directory: "/build"
-    schedule:
-      interval: "daily"
-    target-branch: "develop"
-
-  - package-ecosystem: "npm"
-    directory: "/build"
-    schedule:
-      interval: "daily"
-    target-branch: "develop"
-
-  - package-ecosystem: "pip"
-    directory: "/build/python"
-    schedule:
-      interval: "daily"
-    target-branch: "develop"
+    commit-message:
+      prefix: "[Docker]"
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      - "docker"
+    automerge: false
