--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,7 @@
 flask
-fastapi
-uvicorn
-pandas
-numpy
-matplotlib
-scikit-learn
-sqlalchemy
 requests
+protobuf
+python-dotenv
+pyserial
 pytest
-grpcio
-grpcio-tools
-opencv-python
-opencv-python-headless
-kafka-python
-redis
-ipfshttpclient
+gunicorn
