--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,23 @@
 version: '3.8'
 
 services:
-  app:
+  env-monitoring:
     build: .
+    container_name: env_monitoring
     ports:
-      - "8000:8000"
-    env_file:
-      - .env
+      - "8080:8080"
     volumes:
-      - .:/app
+      - ./src:/app/src
+    environment:
+      - MODE=production
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8080"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  redis:
+    image: redis:alpine
+    container_name: env_monitoring_redis
+    restart: unless-stopped
